--- a/Lab_1/lab1.ipynb
+++ b/Lab_1/lab1.ipynb
@@ -14,7 +14,7 @@
    "id": "34af8d27",
    "metadata": {},
    "source": [
-    "<h4>Хід виконання роботи\n",
+    "<h4>Хід виконання роботи</h4>\n",
     "<ul>\n",
     "<li>Створити віртуальне середовище (venv) в якому будуть встановлені всі необхідні бібліотеки та налаштування для даної лабораторної роботи;</li>\n",
     "<li>Для кожної з адміністративних одиниць України завантажити (urllib) тестові структуровані файли, що містять значення VHI-індексу. При зберіганні файлу, до його імені потрібно додати дату та час завантаження. Передбачити повторні запуски скрипту, реалізувати механізм запобігання повторного довантаження та колізії даних;</li>\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "573799fe",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "id": "07286c97",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "id": "2c5f5a62",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "id": "e762a722",
    "metadata": {},
    "outputs": [],
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "id": "e6b1c729",
    "metadata": {},
    "outputs": [],
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "id": "a8d46234",
    "metadata": {},
    "outputs": [],
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "id": "96cb0b99",
    "metadata": {},
    "outputs": [
@@ -296,33 +296,60 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[i] Файл для Vinnytsia уже є, пропуск...\n",
-      "[i] Файл для Volyn уже є, пропуск...\n",
-      "[i] Файл для Dnipropetrovsk уже є, пропуск...\n",
-      "[i] Файл для Donetsk уже є, пропуск...\n",
-      "[i] Файл для Zhytomyr уже є, пропуск...\n",
-      "[i] Файл для Zakarpattia уже є, пропуск...\n",
-      "[i] Файл для Zaporizhzhia уже є, пропуск...\n",
-      "[i] Файл для Ivano-Frankivsk уже є, пропуск...\n",
-      "[i] Файл для Kyiv уже є, пропуск...\n",
-      "[i] Файл для Kirovohrad уже є, пропуск...\n",
-      "[i] Файл для Luhansk уже є, пропуск...\n",
-      "[i] Файл для Lviv уже є, пропуск...\n",
-      "[i] Файл для Mykolaiv уже є, пропуск...\n",
-      "[i] Файл для Odesa уже є, пропуск...\n",
-      "[i] Файл для Poltava уже є, пропуск...\n",
-      "[i] Файл для Rivne уже є, пропуск...\n",
-      "[i] Файл для Sumy уже є, пропуск...\n",
-      "[i] Файл для Ternopil уже є, пропуск...\n",
-      "[i] Файл для Kharkiv уже є, пропуск...\n",
-      "[i] Файл для Kherson уже є, пропуск...\n",
-      "[i] Файл для Khmelnytskyi уже є, пропуск...\n",
-      "[i] Файл для Cherkasy уже є, пропуск...\n",
-      "[i] Файл для Chernivtsi уже є, пропуск...\n",
-      "[i] Файл для Chernihiv уже є, пропуск...\n",
-      "[i] Файл для Crimea уже є, пропуск...\n",
-      "[i] Файл для Kyiv City уже є, пропуск...\n",
-      "[i] Файл для Sevastopol уже є, пропуск...\n",
+      "[↓] Завантаження Vinnytsia...\n",
+      "[✓] Збережено: data\\VHI_1_Vinnytsia.txt\n",
+      "[↓] Завантаження Volyn...\n",
+      "[✓] Збережено: data\\VHI_2_Volyn.txt\n",
+      "[↓] Завантаження Dnipropetrovsk...\n",
+      "[✓] Збережено: data\\VHI_3_Dnipropetrovsk.txt\n",
+      "[↓] Завантаження Donetsk...\n",
+      "[✓] Збережено: data\\VHI_4_Donetsk.txt\n",
+      "[↓] Завантаження Zhytomyr...\n",
+      "[✓] Збережено: data\\VHI_5_Zhytomyr.txt\n",
+      "[↓] Завантаження Zakarpattia...\n",
+      "[✓] Збережено: data\\VHI_6_Zakarpattia.txt\n",
+      "[↓] Завантаження Zaporizhzhia...\n",
+      "[✓] Збережено: data\\VHI_7_Zaporizhzhia.txt\n",
+      "[↓] Завантаження Ivano-Frankivsk...\n",
+      "[✓] Збережено: data\\VHI_8_Ivano-Frankivsk.txt\n",
+      "[↓] Завантаження Kyiv...\n",
+      "[✓] Збережено: data\\VHI_9_Kyiv.txt\n",
+      "[↓] Завантаження Kirovohrad...\n",
+      "[✓] Збережено: data\\VHI_10_Kirovohrad.txt\n",
+      "[↓] Завантаження Luhansk...\n",
+      "[✓] Збережено: data\\VHI_11_Luhansk.txt\n",
+      "[↓] Завантаження Lviv...\n",
+      "[✓] Збережено: data\\VHI_12_Lviv.txt\n",
+      "[↓] Завантаження Mykolaiv...\n",
+      "[✓] Збережено: data\\VHI_13_Mykolaiv.txt\n",
+      "[↓] Завантаження Odesa...\n",
+      "[✓] Збережено: data\\VHI_14_Odesa.txt\n",
+      "[↓] Завантаження Poltava...\n",
+      "[✓] Збережено: data\\VHI_15_Poltava.txt\n",
+      "[↓] Завантаження Rivne...\n",
+      "[✓] Збережено: data\\VHI_16_Rivne.txt\n",
+      "[↓] Завантаження Sumy...\n",
+      "[✓] Збережено: data\\VHI_17_Sumy.txt\n",
+      "[↓] Завантаження Ternopil...\n",
+      "[✓] Збережено: data\\VHI_18_Ternopil.txt\n",
+      "[↓] Завантаження Kharkiv...\n",
+      "[✓] Збережено: data\\VHI_19_Kharkiv.txt\n",
+      "[↓] Завантаження Kherson...\n",
+      "[✓] Збережено: data\\VHI_20_Kherson.txt\n",
+      "[↓] Завантаження Khmelnytskyi...\n",
+      "[✓] Збережено: data\\VHI_21_Khmelnytskyi.txt\n",
+      "[↓] Завантаження Cherkasy...\n",
+      "[✓] Збережено: data\\VHI_22_Cherkasy.txt\n",
+      "[↓] Завантаження Chernivtsi...\n",
+      "[✓] Збережено: data\\VHI_23_Chernivtsi.txt\n",
+      "[↓] Завантаження Chernihiv...\n",
+      "[✓] Збережено: data\\VHI_24_Chernihiv.txt\n",
+      "[↓] Завантаження Crimea...\n",
+      "[✓] Збережено: data\\VHI_25_Crimea.txt\n",
+      "[↓] Завантаження Kyiv City...\n",
+      "[✓] Збережено: data\\VHI_26_Kyiv City.txt\n",
+      "[↓] Завантаження Sevastopol...\n",
+      "[✓] Збережено: data\\VHI_27_Sevastopol.txt\n",
       "1 Vinnytsia 2236\n",
       "2 Volyn 2236\n",
       "3 Dnipropetrovsk 2236\n",
@@ -416,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "id": "4c4fbc15",
    "metadata": {},
    "outputs": [],
@@ -443,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 41,
    "id": "1f43bc7e",
    "metadata": {},
    "outputs": [],
@@ -474,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "id": "ea8fad2c",
    "metadata": {},
    "outputs": [],
@@ -505,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "id": "04fe9411",
    "metadata": {},
    "outputs": [
