--- a/Lab_1/lab1.ipynb
+++ b/Lab_1/lab1.ipynb
@@ -233,13 +233,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "a8d46234",
    "metadata": {},
    "outputs": [],
    "source": [
     "def reindex_provinces_ukr(df):    \n",
-    "    # Сопоставление английских названий с украинскими\n",
+    "    # Зіставлення англійських назв з українською\n",
     "    english_to_ukr = {\n",
     "        \"Vinnytsia\": \"Вінницька\", \"Volyn\": \"Волинська\", \"Dnipropetrovsk\": \"Дніпропетровська\",\n",
     "        \"Donetsk\": \"Донецька\", \"Zhytomyr\": \"Житомирська\", \"Zakarpattia\": \"Закарпатська\",\n",
@@ -252,7 +252,7 @@
     "        \"Crimea\": \"Крим\", \"Kyiv City\": \"м.Київ\", \"Sevastopol\": \"Севастополь\"\n",
     "    }\n",
     "\n",
-    "    # Украинские названия по алфавиту\n",
+    "    # Українські назви за абеткою\n",
     "    ukr_provinces_sorted = [\n",
     "        \"Вінницька\", \"Волинська\", \"Дніпропетровська\", \"Донецька\", \"Житомирська\",\n",
     "        \"Закарпатська\", \"Запорізька\", \"Івано-Франківська\", \"Київська\", \"Кіровоградська\",\n",
@@ -263,14 +263,14 @@
     "    ]\n",
     "    ukr_index_map = {name: idx + 1 for idx, name in enumerate(ukr_provinces_sorted)}\n",
     "\n",
-    "    # Копируем DataFrame, чтобы не менять оригинал\n",
+    "    # Копіюємо DataFrame, щоб не змінювати оригінал\n",
     "    df = df.copy()\n",
     "    df['province_id'] = df['province_name'].map(english_to_ukr).map(ukr_index_map)\n",
     "    df['province_name'] = df['province_name'].map(english_to_ukr)\n",
-    "    # Преобразуем английские имена в украинские, затем присваиваем ID по алфавиту\n",
+    "    # Перетворюємо англійські імена на українські, потім присвоюємо ID по алфавіту\n",
     "   \n",
     "    #df['province_name'] = df['province_name'].map(english_to_ukr)\n",
-    "    # Проверка: если остались NaN\n",
+    "    # Перевірка: якщо залишились NaN\n",
     "    missing = df[df['province_id'].isna()]['province_name'].unique()\n",
     "    if len(missing) > 0:\n",
     "        print(\"[!] Не найденные названия для переиндексации:\", missing)\n",
@@ -283,154 +283,66 @@
    "id": "ac13a95b",
    "metadata": {},
    "source": [
-    "Основний блок що виконує, завантаження, зчитування, то об'єднання даних."
+    "Завантаження наших даних"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "96cb0b99",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[↓] Завантаження Vinnytsia...\n",
-      "[✓] Збережено: data\\VHI_24_Vinnytsia.txt\n",
-      "[↓] Завантаження Volyn...\n",
-      "[✓] Збережено: data\\VHI_25_Volyn.txt\n",
-      "[↓] Завантаження Dnipropetrovsk...\n",
-      "[✓] Збережено: data\\VHI_5_Dnipropetrovsk.txt\n",
-      "[↓] Завантаження Donetsk...\n",
-      "[✓] Збережено: data\\VHI_6_Donetsk.txt\n",
-      "[↓] Завантаження Zhytomyr...\n",
-      "[✓] Збережено: data\\VHI_27_Zhytomyr.txt\n",
-      "[↓] Завантаження Zakarpattia...\n",
-      "[✓] Збережено: data\\VHI_23_Zakarpattia.txt\n",
-      "[↓] Завантаження Zaporizhzhia...\n",
-      "[✓] Збережено: data\\VHI_26_Zaporizhzhia.txt\n",
-      "[↓] Завантаження Ivano-Frankivsk...\n",
-      "[✓] Збережено: data\\VHI_7_Ivano-Frankivsk.txt\n",
-      "[↓] Завантаження Kyiv...\n",
-      "[✓] Збережено: data\\VHI_11_Kyiv.txt\n",
-      "[↓] Завантаження Kirovohrad...\n",
-      "[✓] Збережено: data\\VHI_13_Kirovohrad.txt\n",
-      "[↓] Завантаження Luhansk...\n",
-      "[✓] Збережено: data\\VHI_14_Luhansk.txt\n",
-      "[↓] Завантаження Lviv...\n",
-      "[✓] Збережено: data\\VHI_15_Lviv.txt\n",
-      "[↓] Завантаження Mykolaiv...\n",
-      "[✓] Збережено: data\\VHI_16_Mykolaiv.txt\n",
-      "[↓] Завантаження Odesa...\n",
-      "[✓] Збережено: data\\VHI_17_Odesa.txt\n",
-      "[↓] Завантаження Poltava...\n",
-      "[✓] Збережено: data\\VHI_18_Poltava.txt\n",
-      "[↓] Завантаження Rivne...\n",
-      "[✓] Збережено: data\\VHI_19_Rivne.txt\n",
-      "[↓] Завантаження Sumy...\n",
-      "[✓] Збережено: data\\VHI_21_Sumy.txt\n",
-      "[↓] Завантаження Ternopil...\n",
-      "[✓] Збережено: data\\VHI_22_Ternopil.txt\n",
-      "[↓] Завантаження Kharkiv...\n",
-      "[✓] Збережено: data\\VHI_8_Kharkiv.txt\n",
-      "[↓] Завантаження Kherson...\n",
-      "[✓] Збережено: data\\VHI_9_Kherson.txt\n",
-      "[↓] Завантаження Khmelnytskyi...\n",
-      "[✓] Збережено: data\\VHI_10_Khmelnytskyi.txt\n",
-      "[↓] Завантаження Cherkasy...\n",
-      "[✓] Збережено: data\\VHI_1_Cherkasy.txt\n",
-      "[↓] Завантаження Chernivtsi...\n",
-      "[✓] Збережено: data\\VHI_3_Chernivtsi.txt\n",
-      "[↓] Завантаження Chernihiv...\n",
-      "[✓] Збережено: data\\VHI_2_Chernihiv.txt\n",
-      "[↓] Завантаження Crimea...\n",
-      "[✓] Збережено: data\\VHI_4_Crimea.txt\n",
-      "[↓] Завантаження Kyiv City...\n",
-      "[✓] Збережено: data\\VHI_12_Kyiv City.txt\n",
-      "[↓] Завантаження Sevastopol...\n",
-      "[✓] Збережено: data\\VHI_20_Sevastopol.txt\n",
-      "24 Vinnytsia 2236\n",
-      "25 Volyn 2236\n",
-      "5 Dnipropetrovsk 2236\n",
-      "6 Donetsk 2236\n",
-      "27 Zhytomyr 2236\n",
-      "23 Zakarpattia 2236\n",
-      "26 Zaporizhzhia 2236\n",
-      "7 Ivano-Frankivsk 2236\n",
-      "11 Kyiv 2236\n",
-      "13 Kirovohrad 2236\n",
-      "14 Luhansk 2236\n",
-      "15 Lviv 2236\n",
-      "16 Mykolaiv 2236\n",
-      "17 Odesa 2236\n",
-      "18 Poltava 2236\n",
-      "19 Rivne 2236\n",
-      "21 Sumy 2236\n",
-      "22 Ternopil 2236\n",
-      "8 Kharkiv 2236\n",
-      "9 Kherson 2236\n",
-      "10 Khmelnytskyi 2236\n",
-      "1 Cherkasy 2236\n",
-      "3 Chernivtsi 2236\n",
-      "2 Chernihiv 2236\n",
-      "4 Crimea 2236\n",
-      "12 Kyiv City 2236\n",
-      "20 Sevastopol 2236\n",
-      "[✓] Дані збережено у all_vhi_cleaned.csv\n",
-      "   year  week    SMN     SMT    VCI    TCI    VHI  province_id province_name\n",
-      "0  1982     1  0.068  263.59  63.47  28.34  45.90            1     Вінницька\n",
-      "1  1982     2  0.074  265.78  67.62  23.05  45.34            1     Вінницька\n",
-      "2  1982     3  0.076  267.19  69.37  20.40  44.88            1     Вінницька\n",
-      "3  1982     4  0.075  268.57  65.26  17.93  41.60            1     Вінницька\n",
-      "4  1982     5  0.072  269.24  58.58  20.00  39.29            1     Вінницька\n",
-      "       year  week    SMN     SMT    VCI    TCI    VHI  province_id  \\\n",
-      "0      1982     1  0.068  263.59  63.47  28.34  45.90            1   \n",
-      "1      1982     2  0.074  265.78  67.62  23.05  45.34            1   \n",
-      "2      1982     3  0.076  267.19  69.37  20.40  44.88            1   \n",
-      "3      1982     4  0.075  268.57  65.26  17.93  41.60            1   \n",
-      "4      1982     5  0.072  269.24  58.58  20.00  39.29            1   \n",
-      "...     ...   ...    ...     ...    ...    ...    ...          ...   \n",
-      "60367  2024    48  0.211  280.75  88.40  11.77  50.08           27   \n",
-      "60368  2024    49  0.199  280.07  89.19   9.69  49.44           27   \n",
-      "60369  2024    50  0.188  279.76  91.98   5.74  48.86           27   \n",
-      "60370  2024    51  0.181  279.52  94.34   3.45  48.89           27   \n",
-      "60371  2024    52  0.179  279.55  95.62   2.25  48.93           27   \n",
-      "\n",
-      "      province_name  \n",
-      "0         Вінницька  \n",
-      "1         Вінницька  \n",
-      "2         Вінницька  \n",
-      "3         Вінницька  \n",
-      "4         Вінницька  \n",
-      "...             ...  \n",
-      "60367   Севастополь  \n",
-      "60368   Севастополь  \n",
-      "60369   Севастополь  \n",
-      "60370   Севастополь  \n",
-      "60371   Севастополь  \n",
-      "\n",
-      "[60372 rows x 9 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# === Основний блок ===\n",
-    "if __name__ == \"__main__\":\n",
-    "    df_all = load_all_vhi()\n",
-    "    for pid, pname in PROVINCES.items():\n",
-    "        filepath = os.path.join(SAVE_DIR, f\"VHI_{pid}_{pname}.txt\")\n",
-    "        df = read_vhi_file(filepath, pid, pname)\n",
-    "        print(pid, pname, len(df))\n",
-    "    if not df_all.empty:  \n",
-    "        df_all = reindex_provinces_ukr(df_all)\n",
-    "        df_all.to_csv(\"all_vhi_cleaned.csv\", index=False)        \n",
-    "        print(\"[✓] Дані збережено у all_vhi_cleaned.csv\")\n",
-    "        print(df_all.head())\n",
-    "        # якщо треба подивитись сортування:\n",
-    "        print(df_all.sort_values('province_id'))\n",
-    "    else:\n",
-    "        print(\"[!] Дані не були завантажені\")"
+    "df_all = load_all_vhi()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c8f7dfc",
+   "metadata": {},
+   "source": [
+    "Зчитування даних"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b06bb68b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for pid, pname in PROVINCES.items():\n",
+    "    filepath = os.path.join(SAVE_DIR, f\"VHI_{pid}_{pname}.txt\")\n",
+    "    df = read_vhi_file(filepath, pid, pname)\n",
+    "    print(pid, pname, len(df))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af06d389",
+   "metadata": {},
+   "source": [
+    "Завантаження у один великий DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5096b91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not df_all.empty:  \n",
+    "    df_all = reindex_provinces_ukr(df_all)\n",
+    "    df_all.to_csv(\"all_vhi_cleaned.csv\", index=False)        \n",
+    "    print(\"[✓] Дані збережено у all_vhi_cleaned.csv\")\n",
+    "    print(df_all.head())\n",
+    "    # якщо треба подивитись сортування:\n",
+    "    print(df_all.sort_values('province_id'))\n",
+    "else:\n",
+    "    print(\"[!] Дані не були завантажені\")"
    ]
   },
   {
@@ -443,10 +355,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 57,
    "id": "4c4fbc15",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       year  week    VHI province_name\n",
+      "19396  2011     1  42.93      Київська\n",
+      "19397  2011     2  39.83      Київська\n",
+      "19398  2011     3  38.09      Київська\n",
+      "19399  2011     4  38.22      Київська\n",
+      "19400  2011     5  38.62      Київська\n"
+     ]
+    }
+   ],
    "source": [
     "def vhi_by_region_year(df, province_name, year):\n",
     "    \"\"\"\n",
@@ -457,7 +382,9 @@
     "    year : int - рік\n",
     "    \"\"\"\n",
     "    filtered = df[(df['province_name'] == province_name) & (df['year'] == year)]\n",
-    "    return filtered[['year', 'week', 'VHI', 'province_name']]"
+    "    return filtered[['year', 'week', 'VHI', 'province_name']]\n",
+    "# ряд VHI для Києва за 2011\n",
+    "print(vhi_by_region_year(df_all, \"Київська\", 2011).head())"
    ]
   },
   {
@@ -470,10 +397,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 58,
    "id": "1f43bc7e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       year  week    VHI province_name\n",
+      "19344  2010     1  47.84      Київська\n",
+      "19345  2010     2  47.23      Київська\n",
+      "19346  2010     3  49.70      Київська\n",
+      "19347  2010     4  52.06      Київська\n",
+      "19348  2010     5  52.79      Київська\n"
+     ]
+    }
+   ],
    "source": [
     "def vhi_by_regions_years(df, provinces, year_start, year_end):\n",
     "    \"\"\"\n",
@@ -488,7 +428,10 @@
     "        (df['year'] >= year_start) &\n",
     "        (df['year'] <= year_end)\n",
     "    ]\n",
-    "    return filtered[['year', 'week', 'VHI', 'province_name']]"
+    "    return filtered[['year', 'week', 'VHI', 'province_name']]\n",
+    "\n",
+    "# ряд VHI для Києва та Львова за 2010-2012\n",
+    "print(vhi_by_regions_years(df_all, [\"Київська\",\"Львівська\"], 2010, 2012).head())"
    ]
   },
   {
@@ -501,10 +444,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 60,
    "id": "ea8fad2c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  province_name    min    max       mean  median\n",
+      "0     Вінницька  29.28  68.10  45.910256  43.985\n",
+      "1      Київська  26.82  74.38  44.714103  43.820\n",
+      "2     Черкаська  28.04  72.75  44.589744  42.680\n"
+     ]
+    }
+   ],
    "source": [
     "def vhi_stats(df, provinces, years):\n",
     "    \"\"\"\n",
@@ -519,56 +473,10 @@
     "    ]\n",
     "    \n",
     "    stats = filtered.groupby('province_name')['VHI'].agg(['min','max','mean','median']).reset_index()\n",
-    "    return stats"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cecd875d",
-   "metadata": {},
-   "source": [
-    "Демонстрація ціх функцій."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "id": "04fe9411",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       year  week    VHI province_name\n",
-      "19396  2011     1  39.77      Київська\n",
-      "19397  2011     2  38.20      Київська\n",
-      "19398  2011     3  38.36      Київська\n",
-      "19399  2011     4  39.36      Київська\n",
-      "19400  2011     5  41.32      Київська\n",
-      "       year  week    VHI province_name\n",
-      "19344  2010     1  50.19      Київська\n",
-      "19345  2010     2  48.41      Київська\n",
-      "19346  2010     3  47.55      Київська\n",
-      "19347  2010     4  47.77      Київська\n",
-      "19348  2010     5  48.36      Київська\n",
-      "  province_name    min    max       mean  median\n",
-      "0     Вінницька  28.04  72.75  44.589744  42.680\n",
-      "1      Київська  19.42  69.48  39.700577  39.105\n",
-      "2     Львівська  26.81  62.09  43.638718  44.460\n"
-     ]
-    }
-   ],
-   "source": [
-    "# ряд VHI для Києва за 2011\n",
-    "print(vhi_by_region_year(df_all, \"Київська\", 2011).head())\n",
-    "\n",
-    "# ряд VHI для Києва та Львова за 2010-2012\n",
-    "print(vhi_by_regions_years(df_all, [\"Київська\",\"Львівська\"], 2010, 2012).head())\n",
+    "    return stats\n",
     "\n",
     "# статистика для Києва та Львова за 2010-2012\n",
-    "print(vhi_stats(df_all, [\"Київська\",\"Львівська\",\"Вінницька\"], [2010,2011,2012]))\n",
-    "\n"
+    "print(vhi_stats(df_all, [\"Київська\",\"Черкаська\",\"Вінницька\"], [2010,2011,2012]))\n"
    ]
   }
  ],
