--- a/Lab_1/lab1_pert_2.ipynb
+++ b/Lab_1/lab1_pert_2.ipynb
@@ -239,192 +239,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 52,
    "id": "020cf0ea",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def filter_active_power(df, threshold=5):\n",
-    "    \"\"\"Обрати записи, де Global_active_power перевищує threshold кВт\"\"\"\n",
-    "    return df[df['Global_active_power'] > threshold]\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4e751f45",
-   "metadata": {},
-   "source": [
-    "Вибірка за струмом 19-20 А та порівняння груп споживання. \n",
-    "Група 1 (пральна машина + холодильник) = Sub_metering_1 + Sub_metering_2\n",
-    "Група 2 (бойлер + кондиціонер) = Sub_metering_3 + Global_reactive_power (приклад, оскільки кондиціонера в датасеті немає)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "f055e48b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def filter_current_and_compare(df, current_min=19, current_max=20):\n",
-    "    subset = df[(df['Global_intensity'] >= current_min) & (df['Global_intensity'] <= current_max)].copy()\n",
-    "    subset['group1'] = subset['Sub_metering_1'] + subset['Sub_metering_2']\n",
-    "    subset['group2'] = subset['Sub_metering_3'] + subset['Global_reactive_power']\n",
-    "    return subset[subset['group1'] > subset['group2']]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "04076aa6",
-   "metadata": {},
-   "source": [
-    "Випадкова вибірка 500000 записів та середні значення груп"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "164eca61",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def random_sample_means(df, n=500000):\n",
-    "    sample = df.sample(n=n, replace=False, random_state=42)\n",
-    "    sample['group1'] = sample['Sub_metering_1']\n",
-    "    sample['group2'] = sample['Sub_metering_2']\n",
-    "    sample['group3'] = sample['Sub_metering_3']\n",
-    "    means = sample[['group1','group2','group3']].mean()\n",
-    "    return sample, means"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4c5282f2",
-   "metadata": {},
-   "source": [
-    "Вибірка після 18:00 з основним споживанням на групі 2 та підбір кожного N-го"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "68235547",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def evening_selection(df):\n",
-    "    # створюємо колонку з часом\n",
-    "    df['hour'] = df.index.hour\n",
-    "    subset = df[(df['hour'] >= 18) & (df['Global_active_power'] > 6)]\n",
-    "    \n",
-    "    # групи споживання\n",
-    "    subset['group1'] = subset['Sub_metering_1']  # пральна машина\n",
-    "    subset['group2'] = subset['Sub_metering_2']  # холодильник/освітлення\n",
-    "    subset['group3'] = subset['Sub_metering_3']  # інші\n",
-    "\n",
-    "    # вибираємо ті, де група2 найбільша\n",
-    "    subset = subset[(subset['group2'] > subset['group1']) & (subset['group2'] > subset['group3'])]\n",
-    "\n",
-    "    # ділимо на дві половини\n",
-    "    half = len(subset)//2\n",
-    "    first_half = subset.iloc[:half:3]   # кожен третій\n",
-    "    second_half = subset.iloc[half::4]  # кожен четвертий\n",
-    "\n",
-    "    return pd.concat([first_half, second_half])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2e803464",
-   "metadata": {},
-   "source": [
-    "Нормалізація та стандартизація"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "01c18834",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def normalize_and_standardize(df, cols):\n",
-    "    # Нормалізація [0,1]\n",
-    "    for col in cols:\n",
-    "        df[col+'_norm'] = (df[col] - df[col].min()) / (df[col].max() - df[col].min())\n",
-    "    \n",
-    "    # Стандартизація (z-score)\n",
-    "    for col in cols:\n",
-    "        df[col+'_std'] = (df[col] - df[col].mean()) / df[col].std()\n",
-    "    \n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a901430c",
-   "metadata": {},
-   "source": [
-    "Підрахунок коефіцієнтів Пірсона та Спірмена"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "0e036357",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def correlation(df, col1, col2):\n",
-    "    # Пірсон \n",
-    "    pearson = df[col1].corr(df[col2], method='pearson')\n",
-    "    \n",
-    "    # Спірмен (через ранги)\n",
-    "    rank1 = df[col1].rank()\n",
-    "    rank2 = df[col2].rank()\n",
-    "    spearman = rank1.corr(rank2)  # кореляція Пірсона між рангами\n",
-    "    return pearson, spearman"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "becb3373",
-   "metadata": {},
-   "source": [
-    "One Hot Encoding категоріального атрибута"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "2bfa460f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def one_hot_encode(df, col):\n",
-    "    return pd.get_dummies(df, columns=[col], prefix=[col])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a87894cb",
-   "metadata": {},
-   "source": [
-    "Наступний блок коду, це демонстрація кожної з цих функцій"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "60c37e3d",
-   "metadata": {},
-   "source": [
-    "Вибірка за Global_active_power > 5 кВт"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "c279356f",
    "metadata": {},
    "outputs": [
     {
@@ -459,41 +275,46 @@
       "2010-11-24 07:51:00              24.6             0.0            39.0   \n",
       "2010-11-25 07:21:00              21.4             1.0             2.0   \n",
       "\n",
-      "                     Sub_metering_3  \n",
-      "Datetime                             \n",
-      "2006-12-16 17:25:00            16.0  \n",
-      "2006-12-16 17:26:00            17.0  \n",
-      "2006-12-16 17:27:00            17.0  \n",
-      "2006-12-16 17:35:00            17.0  \n",
-      "2006-12-16 17:36:00            16.0  \n",
-      "...                             ...  \n",
-      "2010-11-22 18:40:00             0.0  \n",
-      "2010-11-22 18:41:00             0.0  \n",
-      "2010-11-24 07:50:00            17.0  \n",
-      "2010-11-24 07:51:00            17.0  \n",
-      "2010-11-25 07:21:00            18.0  \n",
+      "                     Sub_metering_3  hour  \n",
+      "Datetime                                   \n",
+      "2006-12-16 17:25:00            16.0    17  \n",
+      "2006-12-16 17:26:00            17.0    17  \n",
+      "2006-12-16 17:27:00            17.0    17  \n",
+      "2006-12-16 17:35:00            17.0    17  \n",
+      "2006-12-16 17:36:00            16.0    17  \n",
+      "...                             ...   ...  \n",
+      "2010-11-22 18:40:00             0.0    18  \n",
+      "2010-11-22 18:41:00             0.0    18  \n",
+      "2010-11-24 07:50:00            17.0     7  \n",
+      "2010-11-24 07:51:00            17.0     7  \n",
+      "2010-11-25 07:21:00            18.0     7  \n",
       "\n",
-      "[17547 rows x 7 columns]\n"
+      "[17547 rows x 8 columns]\n"
      ]
     }
    ],
    "source": [
+    "def filter_active_power(df, threshold=5):\n",
+    "    \"\"\"Обрати записи, де Global_active_power перевищує threshold кВт\"\"\"\n",
+    "    return df[df['Global_active_power'] > threshold]\n",
     "df_filtered = filter_active_power(df)\n",
     "print(df_filtered)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d5fb7b02",
+   "id": "4e751f45",
    "metadata": {},
    "source": [
-    "Вибірка за струмом 19-20 А та порівняння груп споживання"
+    "Вибірка за струмом 19-20 А та порівняння груп споживання. \n",
+    "Група 1 (пральна машина + холодильник) = Sub_metering_1 + Sub_metering_2\n",
+    "Група 2 (бойлер + кондиціонер) = Sub_metering_3 + Global_reactive_power (приклад, оскільки кондиціонера в датасеті немає)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "8aec70a1",
+   "execution_count": 51,
+   "id": "f055e48b",
    "metadata": {},
    "outputs": [
     {
@@ -528,32 +349,37 @@
       "2010-11-24 07:56:00              19.0             0.0            39.0   \n",
       "2010-11-24 07:57:00              19.4             0.0            39.0   \n",
       "\n",
-      "                     Sub_metering_3  group1  group2  \n",
-      "Datetime                                             \n",
-      "2006-12-16 18:09:00            16.0    37.0  16.136  \n",
-      "2006-12-17 01:04:00             0.0    13.0   0.258  \n",
-      "2006-12-17 01:08:00             0.0    27.0   0.104  \n",
-      "2006-12-17 01:19:00             0.0    36.0   0.140  \n",
-      "2006-12-17 01:20:00             0.0    35.0   0.152  \n",
-      "...                             ...     ...     ...  \n",
-      "2010-11-24 07:53:00            17.0    39.0  17.000  \n",
-      "2010-11-24 07:54:00            18.0    39.0  18.000  \n",
-      "2010-11-24 07:55:00            17.0    40.0  17.000  \n",
-      "2010-11-24 07:56:00            17.0    39.0  17.000  \n",
-      "2010-11-24 07:57:00            17.0    39.0  17.000  \n",
+      "                     Sub_metering_3  hour  group1  group2  \n",
+      "Datetime                                                   \n",
+      "2006-12-16 18:09:00            16.0    18    37.0  16.136  \n",
+      "2006-12-17 01:04:00             0.0     1    13.0   0.258  \n",
+      "2006-12-17 01:08:00             0.0     1    27.0   0.104  \n",
+      "2006-12-17 01:19:00             0.0     1    36.0   0.140  \n",
+      "2006-12-17 01:20:00             0.0     1    35.0   0.152  \n",
+      "...                             ...   ...     ...     ...  \n",
+      "2010-11-24 07:53:00            17.0     7    39.0  17.000  \n",
+      "2010-11-24 07:54:00            18.0     7    39.0  18.000  \n",
+      "2010-11-24 07:55:00            17.0     7    40.0  17.000  \n",
+      "2010-11-24 07:56:00            17.0     7    39.0  17.000  \n",
+      "2010-11-24 07:57:00            17.0     7    39.0  17.000  \n",
       "\n",
-      "[5579 rows x 9 columns]\n"
+      "[5579 rows x 10 columns]\n"
      ]
     }
    ],
    "source": [
+    "def filter_current_and_compare(df, current_min=19, current_max=20):\n",
+    "    subset = df[(df['Global_intensity'] >= current_min) & (df['Global_intensity'] <= current_max)].copy()\n",
+    "    subset['group1'] = subset['Sub_metering_1'] + subset['Sub_metering_2']\n",
+    "    subset['group2'] = subset['Sub_metering_3'] + subset['Global_reactive_power']\n",
+    "    return subset[subset['group1'] > subset['group2']]\n",
     "df_current = filter_current_and_compare(df)\n",
-    "print(df_current)\n"
+    "print(df_current)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "493238fe",
+   "id": "04076aa6",
    "metadata": {},
    "source": [
     "Випадкова вибірка 500000 записів та середні значення груп"
@@ -561,8 +387,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "b2173a42",
+   "execution_count": 50,
+   "id": "164eca61",
    "metadata": {},
    "outputs": [
     {
@@ -597,21 +423,21 @@
       "2008-08-12 18:35:00               1.4             0.0             1.0   \n",
       "2009-02-17 02:33:00               1.2             0.0             0.0   \n",
       "\n",
-      "                     Sub_metering_3  group1  group2  group3  \n",
-      "Datetime                                                     \n",
-      "2010-07-07 18:10:00             1.0     0.0     0.0     1.0  \n",
-      "2007-05-14 06:50:00             0.0     0.0     2.0     0.0  \n",
-      "2007-09-26 18:10:00             0.0     0.0     1.0     0.0  \n",
-      "2007-06-19 07:30:00            18.0     1.0     0.0    18.0  \n",
-      "2010-05-10 04:43:00             1.0     0.0     2.0     1.0  \n",
-      "...                             ...     ...     ...     ...  \n",
-      "2007-04-26 21:58:00             0.0     0.0     0.0     0.0  \n",
-      "2007-11-11 18:00:00             0.0     0.0     0.0     0.0  \n",
-      "2010-05-17 23:04:00             1.0     0.0     0.0     1.0  \n",
-      "2008-08-12 18:35:00             0.0     0.0     1.0     0.0  \n",
-      "2009-02-17 02:33:00             0.0     0.0     0.0     0.0  \n",
+      "                     Sub_metering_3  hour  group1  group2  group3  \n",
+      "Datetime                                                           \n",
+      "2010-07-07 18:10:00             1.0    18     0.0     0.0     1.0  \n",
+      "2007-05-14 06:50:00             0.0     6     0.0     2.0     0.0  \n",
+      "2007-09-26 18:10:00             0.0    18     0.0     1.0     0.0  \n",
+      "2007-06-19 07:30:00            18.0     7     1.0     0.0    18.0  \n",
+      "2010-05-10 04:43:00             1.0     4     0.0     2.0     1.0  \n",
+      "...                             ...   ...     ...     ...     ...  \n",
+      "2007-04-26 21:58:00             0.0    21     0.0     0.0     0.0  \n",
+      "2007-11-11 18:00:00             0.0    18     0.0     0.0     0.0  \n",
+      "2010-05-17 23:04:00             1.0    23     0.0     0.0     1.0  \n",
+      "2008-08-12 18:35:00             0.0    18     0.0     1.0     0.0  \n",
+      "2009-02-17 02:33:00             0.0     2     0.0     0.0     0.0  \n",
       "\n",
-      "[500000 rows x 10 columns] group1    1.123054\n",
+      "[500000 rows x 11 columns] group1    1.123054\n",
       "group2    1.299983\n",
       "group3    6.465535\n",
       "dtype: float64\n"
@@ -619,13 +445,20 @@
     }
    ],
    "source": [
+    "def random_sample_means(df, n=500000):\n",
+    "    sample = df.sample(n=n, replace=False, random_state=42)\n",
+    "    sample['group1'] = sample['Sub_metering_1']\n",
+    "    sample['group2'] = sample['Sub_metering_2']\n",
+    "    sample['group3'] = sample['Sub_metering_3']\n",
+    "    means = sample[['group1','group2','group3']].mean()\n",
+    "    return sample, means\n",
     "sample, means = random_sample_means(df)\n",
-    "print(sample,means)\n"
+    "print(sample,means)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7defe0fd",
+   "id": "4c5282f2",
    "metadata": {},
    "source": [
     "Вибірка після 18:00 з основним споживанням на групі 2 та підбір кожного N-го"
@@ -633,8 +466,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "22b8866c",
+   "execution_count": 49,
+   "id": "68235547",
    "metadata": {},
    "outputs": [
     {
@@ -690,19 +523,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Ivan Moroz\\AppData\\Local\\Temp\\ipykernel_9352\\2482100157.py:7: SettingWithCopyWarning: \n",
+      "C:\\Users\\Ivan Moroz\\AppData\\Local\\Temp\\ipykernel_9352\\2999314846.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  subset['group1'] = subset['Sub_metering_1']  # пральна машина\n",
-      "C:\\Users\\Ivan Moroz\\AppData\\Local\\Temp\\ipykernel_9352\\2482100157.py:8: SettingWithCopyWarning: \n",
+      "C:\\Users\\Ivan Moroz\\AppData\\Local\\Temp\\ipykernel_9352\\2999314846.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  subset['group2'] = subset['Sub_metering_2']  # холодильник/освітлення\n",
-      "C:\\Users\\Ivan Moroz\\AppData\\Local\\Temp\\ipykernel_9352\\2482100157.py:9: SettingWithCopyWarning: \n",
+      "C:\\Users\\Ivan Moroz\\AppData\\Local\\Temp\\ipykernel_9352\\2999314846.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -712,13 +545,32 @@
     }
    ],
    "source": [
+    "def evening_selection(df):\n",
+    "    # створюємо колонку з часом\n",
+    "    df['hour'] = df.index.hour\n",
+    "    subset = df[(df['hour'] >= 18) & (df['Global_active_power'] > 6)]\n",
+    "    \n",
+    "    # групи споживання\n",
+    "    subset['group1'] = subset['Sub_metering_1']  # пральна машина\n",
+    "    subset['group2'] = subset['Sub_metering_2']  # холодильник/освітлення\n",
+    "    subset['group3'] = subset['Sub_metering_3']  # інші\n",
+    "\n",
+    "    # вибираємо ті, де група2 найбільша\n",
+    "    subset = subset[(subset['group2'] > subset['group1']) & (subset['group2'] > subset['group3'])]\n",
+    "\n",
+    "    # ділимо на дві половини\n",
+    "    half = len(subset)//2\n",
+    "    first_half = subset.iloc[:half:3]   # кожен третій\n",
+    "    second_half = subset.iloc[half::4]  # кожен четвертий\n",
+    "\n",
+    "    return pd.concat([first_half, second_half])\n",
     "evening_df = evening_selection(df)\n",
     "print(evening_df)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "950cdc2e",
+   "id": "2e803464",
    "metadata": {},
    "source": [
     "Нормалізація та стандартизація"
@@ -726,8 +578,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "1c9e0377",
+   "execution_count": 48,
+   "id": "01c18834",
    "metadata": {},
    "outputs": [
     {
@@ -809,13 +661,23 @@
     }
    ],
    "source": [
+    "def normalize_and_standardize(df, cols):\n",
+    "    # Нормалізація [0,1]\n",
+    "    for col in cols:\n",
+    "        df[col+'_norm'] = (df[col] - df[col].min()) / (df[col].max() - df[col].min())\n",
+    "    \n",
+    "    # Стандартизація (z-score)\n",
+    "    for col in cols:\n",
+    "        df[col+'_std'] = (df[col] - df[col].mean()) / df[col].std()\n",
+    "    \n",
+    "    return df\n",
     "evening_df = normalize_and_standardize(evening_df, ['group1','group2','group3'])\n",
-    "print(evening_df)\n"
+    "print(evening_df)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c61afc7e",
+   "id": "a901430c",
    "metadata": {},
    "source": [
     "Підрахунок коефіцієнтів Пірсона та Спірмена"
@@ -823,8 +685,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "1df48ec1",
+   "execution_count": 47,
+   "id": "0e036357",
    "metadata": {},
    "outputs": [
     {
@@ -836,13 +698,22 @@
     }
    ],
    "source": [
+    "def correlation(df, col1, col2):\n",
+    "    # Пірсон \n",
+    "    pearson = df[col1].corr(df[col2], method='pearson')\n",
+    "    \n",
+    "    # Спірмен (через ранги)\n",
+    "    rank1 = df[col1].rank()\n",
+    "    rank2 = df[col2].rank()\n",
+    "    spearman = rank1.corr(rank2)  # кореляція Пірсона між рангами\n",
+    "    return pearson, spearman\n",
     "pearson, spearman = correlation(df, 'Global_active_power', 'Voltage')\n",
-    "print(pearson,spearman)\n"
+    "print(pearson,spearman)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "53deb01f",
+   "id": "becb3373",
    "metadata": {},
    "source": [
     "One Hot Encoding категоріального атрибута"
@@ -850,8 +721,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "666a590f",
+   "execution_count": 46,
+   "id": "2bfa460f",
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +774,8 @@
     }
    ],
    "source": [
-    "\n",
+    "def one_hot_encode(df, col):\n",
+    "    return pd.get_dummies(df, columns=[col], prefix=[col])\n",
     "df_encoded = pd.get_dummies(df, columns=['hour'], prefix='hour')\n",
     "print(df_encoded.head())"
    ]
