--- a/Lab_1/lab1.ipynb
+++ b/Lab_1/lab1.ipynb
@@ -273,7 +273,7 @@
     "    # Перевірка: якщо залишились NaN\n",
     "    missing = df[df['province_id'].isna()]['province_name'].unique()\n",
     "    if len(missing) > 0:\n",
-    "        print(\"[!] Не найденные названия для переиндексации:\", missing)\n",
+    "        print(\"[!]Не знайдені назви для переіндексації:\", missing)\n",
     "\n",
     "    return df"
    ]
