--- a/Lab_1/lab1.ipynb
+++ b/Lab_1/lab1.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 61,
    "id": "e762a722",
    "metadata": {},
    "outputs": [],
@@ -181,7 +181,7 @@
     "            \"TCI\": float,\n",
     "            \"VHI\": float\n",
     "        })\n",
-    "\n",
+    "        df = df[df[\"VHI\"] != -1.0].reset_index(drop=True)\n",
     "        df['province_id'] = province_id\n",
     "        df['province_name'] = province_name\n",
     "\n",
@@ -288,10 +288,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "96cb0b99",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[↓] Завантаження Vinnytsia...\n",
+      "[✓] Збережено: data\\VHI_24_Vinnytsia.txt\n",
+      "[↓] Завантаження Volyn...\n",
+      "[✓] Збережено: data\\VHI_25_Volyn.txt\n",
+      "[↓] Завантаження Dnipropetrovsk...\n",
+      "[✓] Збережено: data\\VHI_5_Dnipropetrovsk.txt\n",
+      "[↓] Завантаження Donetsk...\n",
+      "[✓] Збережено: data\\VHI_6_Donetsk.txt\n",
+      "[↓] Завантаження Zhytomyr...\n",
+      "[✓] Збережено: data\\VHI_27_Zhytomyr.txt\n",
+      "[↓] Завантаження Zakarpattia...\n",
+      "[✓] Збережено: data\\VHI_23_Zakarpattia.txt\n",
+      "[↓] Завантаження Zaporizhzhia...\n",
+      "[✓] Збережено: data\\VHI_26_Zaporizhzhia.txt\n",
+      "[↓] Завантаження Ivano-Frankivsk...\n",
+      "[✓] Збережено: data\\VHI_7_Ivano-Frankivsk.txt\n",
+      "[↓] Завантаження Kyiv...\n",
+      "[✓] Збережено: data\\VHI_11_Kyiv.txt\n",
+      "[↓] Завантаження Kirovohrad...\n",
+      "[✓] Збережено: data\\VHI_13_Kirovohrad.txt\n",
+      "[↓] Завантаження Luhansk...\n",
+      "[✓] Збережено: data\\VHI_14_Luhansk.txt\n",
+      "[↓] Завантаження Lviv...\n",
+      "[✓] Збережено: data\\VHI_15_Lviv.txt\n",
+      "[↓] Завантаження Mykolaiv...\n",
+      "[✓] Збережено: data\\VHI_16_Mykolaiv.txt\n",
+      "[↓] Завантаження Odesa...\n",
+      "[✓] Збережено: data\\VHI_17_Odesa.txt\n",
+      "[↓] Завантаження Poltava...\n",
+      "[✓] Збережено: data\\VHI_18_Poltava.txt\n",
+      "[↓] Завантаження Rivne...\n",
+      "[✓] Збережено: data\\VHI_19_Rivne.txt\n",
+      "[↓] Завантаження Sumy...\n",
+      "[✓] Збережено: data\\VHI_21_Sumy.txt\n",
+      "[↓] Завантаження Ternopil...\n",
+      "[✓] Збережено: data\\VHI_22_Ternopil.txt\n",
+      "[↓] Завантаження Kharkiv...\n",
+      "[✓] Збережено: data\\VHI_8_Kharkiv.txt\n",
+      "[↓] Завантаження Kherson...\n",
+      "[✓] Збережено: data\\VHI_9_Kherson.txt\n",
+      "[↓] Завантаження Khmelnytskyi...\n",
+      "[✓] Збережено: data\\VHI_10_Khmelnytskyi.txt\n",
+      "[↓] Завантаження Cherkasy...\n",
+      "[✓] Збережено: data\\VHI_1_Cherkasy.txt\n",
+      "[↓] Завантаження Chernivtsi...\n",
+      "[✓] Збережено: data\\VHI_3_Chernivtsi.txt\n",
+      "[↓] Завантаження Chernihiv...\n",
+      "[✓] Збережено: data\\VHI_2_Chernihiv.txt\n",
+      "[↓] Завантаження Crimea...\n",
+      "[✓] Збережено: data\\VHI_4_Crimea.txt\n",
+      "[↓] Завантаження Kyiv City...\n",
+      "[✓] Збережено: data\\VHI_12_Kyiv City.txt\n",
+      "[↓] Завантаження Sevastopol...\n",
+      "[✓] Збережено: data\\VHI_20_Sevastopol.txt\n"
+     ]
+    }
+   ],
    "source": [
     "# === Основний блок ===\n",
     "df_all = load_all_vhi()\n",
@@ -308,10 +369,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "b06bb68b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24 Vinnytsia 2186\n",
+      "25 Volyn 2186\n",
+      "5 Dnipropetrovsk 2186\n",
+      "6 Donetsk 2186\n",
+      "27 Zhytomyr 2186\n",
+      "23 Zakarpattia 2186\n",
+      "26 Zaporizhzhia 2186\n",
+      "7 Ivano-Frankivsk 2186\n",
+      "11 Kyiv 2186\n",
+      "13 Kirovohrad 2186\n",
+      "14 Luhansk 2186\n",
+      "15 Lviv 2186\n",
+      "16 Mykolaiv 2186\n",
+      "17 Odesa 2186\n",
+      "18 Poltava 2186\n",
+      "19 Rivne 2186\n",
+      "21 Sumy 2186\n",
+      "22 Ternopil 2186\n",
+      "8 Kharkiv 2186\n",
+      "9 Kherson 2186\n",
+      "10 Khmelnytskyi 2186\n",
+      "1 Cherkasy 2186\n",
+      "3 Chernivtsi 2186\n",
+      "2 Chernihiv 2186\n",
+      "4 Crimea 2186\n",
+      "12 Kyiv City 2186\n",
+      "20 Sevastopol 2186\n"
+     ]
+    }
+   ],
    "source": [
     "for pid, pname in PROVINCES.items():\n",
     "    filepath = os.path.join(SAVE_DIR, f\"VHI_{pid}_{pname}.txt\")\n",
@@ -329,10 +424,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "e5096b91",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[✓] Дані збережено у all_vhi_cleaned.csv\n",
+      "   year  week    SMN     SMT    VCI    TCI    VHI  province_id province_name\n",
+      "0  1982     1  0.068  263.59  63.47  28.34  45.90            1     Вінницька\n",
+      "1  1982     2  0.074  265.78  67.62  23.05  45.34            1     Вінницька\n",
+      "2  1982     3  0.076  267.19  69.37  20.40  44.88            1     Вінницька\n",
+      "3  1982     4  0.075  268.57  65.26  17.93  41.60            1     Вінницька\n",
+      "4  1982     5  0.072  269.24  58.58  20.00  39.29            1     Вінницька\n",
+      "       year  week    SMN     SMT    VCI    TCI    VHI  province_id  \\\n",
+      "0      1982     1  0.068  263.59  63.47  28.34  45.90            1   \n",
+      "1      1982     2  0.074  265.78  67.62  23.05  45.34            1   \n",
+      "2      1982     3  0.076  267.19  69.37  20.40  44.88            1   \n",
+      "3      1982     4  0.075  268.57  65.26  17.93  41.60            1   \n",
+      "4      1982     5  0.072  269.24  58.58  20.00  39.29            1   \n",
+      "...     ...   ...    ...     ...    ...    ...    ...          ...   \n",
+      "59017  2024    48  0.211  280.75  88.40  11.77  50.08           27   \n",
+      "59018  2024    49  0.199  280.07  89.19   9.69  49.44           27   \n",
+      "59019  2024    50  0.188  279.76  91.98   5.74  48.86           27   \n",
+      "59020  2024    51  0.181  279.52  94.34   3.45  48.89           27   \n",
+      "59021  2024    52  0.179  279.55  95.62   2.25  48.93           27   \n",
+      "\n",
+      "      province_name  \n",
+      "0         Вінницька  \n",
+      "1         Вінницька  \n",
+      "2         Вінницька  \n",
+      "3         Вінницька  \n",
+      "4         Вінницька  \n",
+      "...             ...  \n",
+      "59017   Севастополь  \n",
+      "59018   Севастополь  \n",
+      "59019   Севастополь  \n",
+      "59020   Севастополь  \n",
+      "59021   Севастополь  \n",
+      "\n",
+      "[59022 rows x 9 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "if not df_all.empty:  \n",
     "    df_all = reindex_provinces_ukr(df_all)\n",
