--- a/Lab_1/lab1.ipynb
+++ b/Lab_1/lab1.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 71,
    "id": "573799fe",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 72,
    "id": "07286c97",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 73,
    "id": "2c5f5a62",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 74,
    "id": "e762a722",
    "metadata": {},
    "outputs": [],
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 75,
    "id": "e6b1c729",
    "metadata": {},
    "outputs": [],
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "id": "a8d46234",
    "metadata": {},
    "outputs": [],
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 88,
    "id": "96cb0b99",
    "metadata": {},
    "outputs": [
@@ -296,60 +296,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[↓] Завантаження Vinnytsia...\n",
-      "[✓] Збережено: data\\VHI_24_Vinnytsia.txt\n",
-      "[↓] Завантаження Volyn...\n",
-      "[✓] Збережено: data\\VHI_25_Volyn.txt\n",
-      "[↓] Завантаження Dnipropetrovsk...\n",
-      "[✓] Збережено: data\\VHI_5_Dnipropetrovsk.txt\n",
-      "[↓] Завантаження Donetsk...\n",
-      "[✓] Збережено: data\\VHI_6_Donetsk.txt\n",
-      "[↓] Завантаження Zhytomyr...\n",
-      "[✓] Збережено: data\\VHI_27_Zhytomyr.txt\n",
-      "[↓] Завантаження Zakarpattia...\n",
-      "[✓] Збережено: data\\VHI_23_Zakarpattia.txt\n",
-      "[↓] Завантаження Zaporizhzhia...\n",
-      "[✓] Збережено: data\\VHI_26_Zaporizhzhia.txt\n",
-      "[↓] Завантаження Ivano-Frankivsk...\n",
-      "[✓] Збережено: data\\VHI_7_Ivano-Frankivsk.txt\n",
-      "[↓] Завантаження Kyiv...\n",
-      "[✓] Збережено: data\\VHI_11_Kyiv.txt\n",
-      "[↓] Завантаження Kirovohrad...\n",
-      "[✓] Збережено: data\\VHI_13_Kirovohrad.txt\n",
-      "[↓] Завантаження Luhansk...\n",
-      "[✓] Збережено: data\\VHI_14_Luhansk.txt\n",
-      "[↓] Завантаження Lviv...\n",
-      "[✓] Збережено: data\\VHI_15_Lviv.txt\n",
-      "[↓] Завантаження Mykolaiv...\n",
-      "[✓] Збережено: data\\VHI_16_Mykolaiv.txt\n",
-      "[↓] Завантаження Odesa...\n",
-      "[✓] Збережено: data\\VHI_17_Odesa.txt\n",
-      "[↓] Завантаження Poltava...\n",
-      "[✓] Збережено: data\\VHI_18_Poltava.txt\n",
-      "[↓] Завантаження Rivne...\n",
-      "[✓] Збережено: data\\VHI_19_Rivne.txt\n",
-      "[↓] Завантаження Sumy...\n",
-      "[✓] Збережено: data\\VHI_21_Sumy.txt\n",
-      "[↓] Завантаження Ternopil...\n",
-      "[✓] Збережено: data\\VHI_22_Ternopil.txt\n",
-      "[↓] Завантаження Kharkiv...\n",
-      "[✓] Збережено: data\\VHI_8_Kharkiv.txt\n",
-      "[↓] Завантаження Kherson...\n",
-      "[✓] Збережено: data\\VHI_9_Kherson.txt\n",
-      "[↓] Завантаження Khmelnytskyi...\n",
-      "[✓] Збережено: data\\VHI_10_Khmelnytskyi.txt\n",
-      "[↓] Завантаження Cherkasy...\n",
-      "[✓] Збережено: data\\VHI_1_Cherkasy.txt\n",
-      "[↓] Завантаження Chernivtsi...\n",
-      "[✓] Збережено: data\\VHI_3_Chernivtsi.txt\n",
-      "[↓] Завантаження Chernihiv...\n",
-      "[✓] Збережено: data\\VHI_2_Chernihiv.txt\n",
-      "[↓] Завантаження Crimea...\n",
-      "[✓] Збережено: data\\VHI_4_Crimea.txt\n",
-      "[↓] Завантаження Kyiv City...\n",
-      "[✓] Збережено: data\\VHI_12_Kyiv City.txt\n",
-      "[↓] Завантаження Sevastopol...\n",
-      "[✓] Збережено: data\\VHI_20_Sevastopol.txt\n"
+      "[i] Файл для Vinnytsia уже є, пропуск...\n",
+      "[i] Файл для Volyn уже є, пропуск...\n",
+      "[i] Файл для Dnipropetrovsk уже є, пропуск...\n",
+      "[i] Файл для Donetsk уже є, пропуск...\n",
+      "[i] Файл для Zhytomyr уже є, пропуск...\n",
+      "[i] Файл для Zakarpattia уже є, пропуск...\n",
+      "[i] Файл для Zaporizhzhia уже є, пропуск...\n",
+      "[i] Файл для Ivano-Frankivsk уже є, пропуск...\n",
+      "[i] Файл для Kyiv уже є, пропуск...\n",
+      "[i] Файл для Kirovohrad уже є, пропуск...\n",
+      "[i] Файл для Luhansk уже є, пропуск...\n",
+      "[i] Файл для Lviv уже є, пропуск...\n",
+      "[i] Файл для Mykolaiv уже є, пропуск...\n",
+      "[i] Файл для Odesa уже є, пропуск...\n",
+      "[i] Файл для Poltava уже є, пропуск...\n",
+      "[i] Файл для Rivne уже є, пропуск...\n",
+      "[i] Файл для Sumy уже є, пропуск...\n",
+      "[i] Файл для Ternopil уже є, пропуск...\n",
+      "[i] Файл для Kharkiv уже є, пропуск...\n",
+      "[i] Файл для Kherson уже є, пропуск...\n",
+      "[i] Файл для Khmelnytskyi уже є, пропуск...\n",
+      "[i] Файл для Cherkasy уже є, пропуск...\n",
+      "[i] Файл для Chernivtsi уже є, пропуск...\n",
+      "[i] Файл для Chernihiv уже є, пропуск...\n",
+      "[i] Файл для Crimea уже є, пропуск...\n",
+      "[i] Файл для Kyiv City уже є, пропуск...\n",
+      "[i] Файл для Sevastopol уже є, пропуск...\n"
      ]
     }
    ],
@@ -369,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 89,
    "id": "b06bb68b",
    "metadata": {},
    "outputs": [
@@ -424,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 90,
    "id": "e5096b91",
    "metadata": {},
    "outputs": [
@@ -475,10 +448,12 @@
     "    df_all.to_csv(\"all_vhi_cleaned.csv\", index=False)        \n",
     "    print(\"[✓] Дані збережено у all_vhi_cleaned.csv\")\n",
     "    print(df_all.head())\n",
+    "    #df_all.head()\n",
     "    # якщо треба подивитись сортування:\n",
     "    print(df_all.sort_values('province_id'))\n",
+    "    \n",
     "else:\n",
-    "    print(\"[!] Дані не були завантажені\")"
+    "    print(\"[!] Дані не були завантажені\")\n"
    ]
   },
   {
@@ -491,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 65,
    "id": "4c4fbc15",
    "metadata": {},
    "outputs": [
@@ -500,11 +475,11 @@
      "output_type": "stream",
      "text": [
       "       year  week    VHI province_name\n",
-      "19396  2011     1  42.93      Київська\n",
-      "19397  2011     2  39.83      Київська\n",
-      "19398  2011     3  38.09      Київська\n",
-      "19399  2011     4  38.22      Київська\n",
-      "19400  2011     5  38.62      Київська\n"
+      "18946  2011     1  42.93      Київська\n",
+      "18947  2011     2  39.83      Київська\n",
+      "18948  2011     3  38.09      Київська\n",
+      "18949  2011     4  38.22      Київська\n",
+      "18950  2011     5  38.62      Київська\n"
      ]
     }
    ],
@@ -533,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 66,
    "id": "1f43bc7e",
    "metadata": {},
    "outputs": [
@@ -542,11 +517,11 @@
      "output_type": "stream",
      "text": [
       "       year  week    VHI province_name\n",
-      "19344  2010     1  47.84      Київська\n",
-      "19345  2010     2  47.23      Київська\n",
-      "19346  2010     3  49.70      Київська\n",
-      "19347  2010     4  52.06      Київська\n",
-      "19348  2010     5  52.79      Київська\n"
+      "18894  2010     1  47.84      Київська\n",
+      "18895  2010     2  47.23      Київська\n",
+      "18896  2010     3  49.70      Київська\n",
+      "18897  2010     4  52.06      Київська\n",
+      "18898  2010     5  52.79      Київська\n"
      ]
     }
    ],
@@ -580,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 68,
    "id": "ea8fad2c",
    "metadata": {},
    "outputs": [
