--- a/Lab_1/lab1_pert_2.ipynb
+++ b/Lab_1/lab1_pert_2.ipynb
@@ -37,14 +37,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 89,
    "id": "9f737c75",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import timeit"
+    "import timeit\n",
+    "from IPython.display import display"
    ]
   },
   {
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 90,
    "id": "f62769b6",
    "metadata": {},
    "outputs": [
@@ -129,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 91,
    "id": "3c65aaf1",
    "metadata": {},
    "outputs": [
@@ -175,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 92,
    "id": "44d06193",
    "metadata": {},
    "outputs": [],
@@ -195,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 83,
    "id": "a7b37867",
    "metadata": {},
    "outputs": [
@@ -203,7 +204,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Середній час виконання: 0.26502 секунд\n"
+      "Середній час виконання: 0.27334 секунд\n"
      ]
     }
    ],
@@ -239,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "020cf0ea",
    "metadata": {},
    "outputs": [
@@ -271,11 +272,9 @@
        "      <th>Sub_metering_1</th>\n",
        "      <th>Sub_metering_2</th>\n",
        "      <th>Sub_metering_3</th>\n",
-       "      <th>hour</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Datetime</th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -295,7 +294,6 @@
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>16.0</td>\n",
-       "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2006-12-16 17:26:00</th>\n",
@@ -306,7 +304,6 @@
        "      <td>0.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>17.0</td>\n",
-       "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2006-12-16 17:27:00</th>\n",
@@ -317,7 +314,6 @@
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>17.0</td>\n",
-       "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2006-12-16 17:35:00</th>\n",
@@ -328,7 +324,6 @@
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>17.0</td>\n",
-       "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2006-12-16 17:36:00</th>\n",
@@ -339,7 +334,6 @@
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>16.0</td>\n",
-       "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2006-12-16 17:37:00</th>\n",
@@ -350,7 +344,6 @@
        "      <td>0.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>17.0</td>\n",
-       "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2006-12-16 17:44:00</th>\n",
@@ -361,7 +354,6 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>16.0</td>\n",
-       "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2006-12-16 17:45:00</th>\n",
@@ -372,7 +364,6 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>17.0</td>\n",
-       "      <td>17</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -401,19 +392,19 @@
        "2006-12-16 17:44:00              25.4             0.0             0.0   \n",
        "2006-12-16 17:45:00              33.2             0.0             0.0   \n",
        "\n",
-       "                     Sub_metering_3  hour  \n",
-       "Datetime                                   \n",
-       "2006-12-16 17:25:00            16.0    17  \n",
-       "2006-12-16 17:26:00            17.0    17  \n",
-       "2006-12-16 17:27:00            17.0    17  \n",
-       "2006-12-16 17:35:00            17.0    17  \n",
-       "2006-12-16 17:36:00            16.0    17  \n",
-       "2006-12-16 17:37:00            17.0    17  \n",
-       "2006-12-16 17:44:00            16.0    17  \n",
-       "2006-12-16 17:45:00            17.0    17  "
+       "                     Sub_metering_3  \n",
+       "Datetime                             \n",
+       "2006-12-16 17:25:00            16.0  \n",
+       "2006-12-16 17:26:00            17.0  \n",
+       "2006-12-16 17:27:00            17.0  \n",
+       "2006-12-16 17:35:00            17.0  \n",
+       "2006-12-16 17:36:00            16.0  \n",
+       "2006-12-16 17:37:00            17.0  \n",
+       "2006-12-16 17:44:00            16.0  \n",
+       "2006-12-16 17:45:00            17.0  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
